tests/assets/www/1.1/errors/invalid_signature.json.php
<?php

header('Content-Type: application/json; charset=UTF-8', true, 400);

?>
Failed to validate oauth signature and token
